# plain_cmake_template

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cli/: CMakeLists.txt  main.c
include/plain_cmake_library/: plain_cmake_library.h
src/: CMakeLists.txt  func.c
tests/: CMakeLists.txt  test_factorial.cpp
